hex selection prevented on mobile

--- a/aartics/m/css/aartics.css
+++ b/aartics/m/css/aartics.css
@@ -457,12 +457,3 @@ raleway {
   font-size: 36px;
   fill: #F8C537;
 }
-
-.noSelect {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
